src/objects/Face_to_Face_Meetings__c.object
<CustomObject>
    <fields>
        <fullName>Estimated_Cost_of_Visit__c</fullName>
        <label>Estimated Cost of Visit</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Notes_from_Visit__c</fullName>
        <label>Notes from Visit</label>
        <length>1024</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Face to Face Meetings</relationshipLabel>
        <relationshipName>Face_to_Face_Meetings</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
        <writeRequiresMasterRead>true</writeRequiresMasterRead>
    </fields>
    <fields>
        <fullName>Primary_Contact__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>Primary Contact for this Face to Face Meeting.</description>
        <inlineHelpText>Primary Contact for this Face to Face Meeting.</inlineHelpText>
        <label>Primary Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Face to Face Meetings</relationshipLabel>
        <relationshipName>Face_to_Face_Meetings</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <label>Face to Face Meetings</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Face to Face Meetings Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Face to Face Meetings</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>